# ArgonautEngine

./: .gitmodules  CMakeLists.txt  README.md
src/: Main.cpp
src/Base/: GLFWWindow.cpp  GLFWWindow.h  Log.cpp  Log.h  Types.h
src/Renderer/: Camera.cpp  Camera.h  GLFWWindow.cpp  GLFWWindow.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/Renderer/Light/: DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h  PointLight.cpp  PointLight.h  SpotLight.cpp  SpotLight.h
src/Renderer/Shaders/Simple/: backpack_frag.glsl  lamp_vert.glsl  light_frag.glsl  light_vert.glsl  simple_frag.glsl  simple_vert.glsl  spotlight_frag.glsl
